--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</div>
 
 					<div class="col-xs-12 col-md-7">
-						<p class="copyright text-sm-center">Copyright © Proyecto 2019</p>
+						<p class="copyright text-sm-center">Copyright © india</p>
 					</div>
 				</div>
 			</div>
