Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 		 <div class="login-form-image">
 			<!-- <div class="login-form-copy">
-			   <h3>IPS Universitaria</h3>
+			   <h3>IPS University</h3>
 			   <h5>Subtitulo de la pagina</h5>
 			</div> -->
 		 </div>
